--- a/mapmobile/pubspec.yaml
+++ b/mapmobile/pubspec.yaml
@@ -20,3 +20,11 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/mallbanner.jpg
+    - assets/images/bookbanner.jpg
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
+        - asset: assets/fonts/Roboto-Italic.ttf
+        - asset: assets/fonts/Roboto-Thin.ttf
+          weight: 700
