--- a/mapmobile/pubspec.yaml
+++ b/mapmobile/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   go_router: ^14.2.1
+  dio: ^5.5.0+1
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
