--- a/mapmobile/pubspec.yaml
+++ b/mapmobile/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   go_router: ^14.2.1
   dio: ^5.5.0+1
   intl: ^0.18.0
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
@@ -23,6 +24,7 @@ flutter:
   assets:
     - assets/images/mallbanner.jpg
     - assets/images/bookbanner.jpg
+    - assets/images/map.png
   fonts:
     - family: Roboto
       fonts:
