--- a/mapmobile/pubspec.yaml
+++ b/mapmobile/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   dio: ^5.5.0+1
   intl: ^0.18.0
   flutter_svg: ^2.0.10+1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
